BCF service implementation.